--- a/Main/Views/Account/Login.cshtml
+++ b/Main/Views/Account/Login.cshtml
@@ -13,8 +13,14 @@
                 @Resources.General.Login
             </div>
             <div class="card-body">
-                <h5 class="card-title"><label style="color:red">لطفا قبل از سفارش وارد سایت شوید</label></h5>
+               
                 <div class="form-group">
+
+                    <label class="control-label col-md-2"> @Html.ActionLink("ثبت نام", MVC.Users.Create())</label>
+                 <br />
+                </div>
+                <div class="form-group">
+
                     <label class="control-label col-md-2">@Resources.General.UserName</label>
                     <div class="col-md-10">
                         <input name="username" id="username" class="form-control " />
@@ -46,7 +52,7 @@
             </div>
 
         </div>
-        @Html.ActionLink("ایجاد کاربر", MVC.Users.Create())
+        @Html.ActionLink("ثبت نام", MVC.Users.Create())
        
     </div>
 }
