--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width" />
     <title>OrederCustomer</title>
     <style>
+        .basket-header {
+            border: 1px solid #d8d8d8;
+            padding: 7px;
+            background: #fafafa;
+            text-align: center;
+            font-size: 12px;
+            font-weight: 500;
+            border-radius: 4px 4px 0 0;
+        }
+
+        #order_comment {
+            width: 100% !important;
+            max-width: 100% !important;
+            height: 150px;
+            resize: vertical;
+            font-size: 12px;
+            font-weight: 200;
+            border-radius: 0 0 4px 4px;
+        }
+
         .scroll {
             direction: ltr;
             max-height: 800px;
@@ -20,22 +40,30 @@
             transition-timing-function: ease-in-out;
         }
 
+
+        .card-img-top {
+            width: 99%;
+        }
+
         div.card:hover {
-                transform: scale(1.2);
-            }
+            transform: scale(1.2);
+        }
+
         .getAddProduct {
-  cursor: pointer;
-  outline: none;
-  box-shadow: 0 9px #999;
-}
+            cursor: pointer;
+            outline: none;
+            box-shadow: 0 9px #999;
+        }
 
-.getAddProduct:hover {background-color: #3e8e41}
+            .getAddProduct:hover {
+                background-color: #3e8e41
+            }
 
-.getAddProduct:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
+            .getAddProduct:active {
+                background-color: #3e8e41;
+                box-shadow: 0 5px #666;
+                transform: translateY(4px);
+            }
     </style>
 </head>
 <body>
@@ -114,6 +142,16 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
+                        <div class="box-textarea-container">
+                            <div class="basket-header">
+                                <span class="icon-pencil-span"></span>    توضیحات سفارش
+                            </div>
+                            <textarea v-model="description" id="order_comment" maxlength="1024" name="order_comment" placeholder="اگر پیشنهادی درمورد نحوه‌ی ارسال یا سفارش خود دارید، در این قسمت بنویسید."></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
                         <button class="btn btn-primary btn-block" v-on:click="redirectToAction()">بررسی نهایی</button>
 
                     </div>
@@ -122,7 +160,7 @@
         </div>
 
     </div>
-    
+
     <script src="~/js/hjFunction.js"></script>
     <script src="~/js/Orders/ordercustomer.js"></script>
 
