--- a/Main/Views/Report/Index.cshtml
+++ b/Main/Views/Report/Index.cshtml
@@ -11,11 +11,50 @@
 <body>
 
     <div id="app">
-    
-     
+        <div class="modal" id="details" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">جزییات</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-12 table-responsive">
+                                <table class="table table-bordered table-striped table-hover table-sm">
+                                    <tr>
+
+                                        <th>نام</th>
+                                        <th>قیمت</th>
+                                        <th>تعداد</th>
+                                        <th>جمع</th>
+                                    </tr>
+                                    <tr v-for="item in detailsFactor" v-bind:key="item.id">
+
+                                        <td>{{ item.Name }}</td>
+                                        <td>{{ item.Price }}</td>
+                                        <td>{{ item.count }}</td>
+                                     
+                                        <td>{{ getSubTotal(item) }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">جمع کل</td>
+                                        <td>{{ getTotal() }}</td>
+                                    </tr>
+                                </table>
+                            </div>
+
+                        </div>
 
 
-
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                </div>
+            </div>
+        </div>
         <br />
         <form action="/" method="post">
             <div class="form-group row">
@@ -34,7 +73,7 @@
                 <div class="row">
 
                     <div class="col-sm-3">
-                        <input class="form-control text-box single-line" type="text" name="username" id="username"   v-model="factor.userName" placeholder="نام کاربری" />
+                        <input class="form-control text-box single-line" type="text" name="username" id="username" v-model="factor.userName" placeholder="نام کاربری" />
                     </div>
                     <div class="col-sm-3">
                         <input class="form-control text-box single-line" type="text" name="mobile" id="mobile" v-model="factor.mobile" placeholder="تلفن همراه" />
@@ -48,9 +87,6 @@
                     </div>
 
                 </div>
-
-
-
 
             </div>
         </form>
@@ -70,6 +106,9 @@
                             تلفن همراه
                         </th>
                         <th>
+                            تایید شده
+                        </th>
+                        <th>
                             عملیات
                         </th>
 
@@ -79,9 +118,10 @@
                         <td>{{i.UserName}}</td>
                         <td>{{i.Address}}</td>
                         <td>{{i.Mobile}}</td>
+                        <td>{{i.approved}}</td>
                         <td>
-                            @*<button v-on:click="editshow(i.Id)">ویرایش</button>&nbsp;
-                            <button v-on:click="deleteProducts(i.Id)">حذف</button> &nbsp;*@
+
+                            <button v-on:click="details(i.Id)">جزییات</button> &nbsp;
                         </td>
                     </tr>
 
@@ -108,6 +148,7 @@
             </div>
         </div>
     </div>
+    <script src="~/js/hjFunction.js"></script>
     <script src="~/js/Report/Index.js"></script>
 </body>
 </html>
