--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -19,8 +19,11 @@
 
     <script src="~/js/hjcomponent.js"></script>
     <style>
-        .nav-link{
-            color:white !important;
+        .dropdown-item{
+            text-align:right;
+        }
+        .nav-link {
+            color: white !important;
         }
     </style>
     <link href="@Links.Content.Site_css" rel="stylesheet" type="text/css" />
@@ -67,8 +70,6 @@
 
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <!-- Brand -->
-       
-
             <!-- Links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -80,28 +81,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Order/OrederCustomer">ثبت سفارش</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Report/Index">گزارش سفارشها</a>
-                </li>
+
+
+
+
+
                 @if (User.Identity.Name == "AdminAdmin")
                 {
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Watch/Index">سفارش ها امروز</a>
+
+                    <li class="nav-item dropdown" style="direction:ltr">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            مدیریت
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="/Order/Create">ایجاد منو غذا</a>
+                            <a class="dropdown-item" href="/Report/Index">گزارش سفارشها</a>
+                            <a class="dropdown-item" href="/Watch/Index">سفارش ها امروز</a>
+                            <a class="dropdown-item" href="/Users/index">ویرایش اطلاعات کاربران</a>
+                        </div>
                     </li>
                 }
-
-
-                <!-- Dropdown -->
-                @*<li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                درباره ما
-            </a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Link 1</a>
-                <a class="dropdown-item" href="#">Link 2</a>
-                <a class="dropdown-item" href="#">Link 3</a>
-            </div>
-        </li>*@
                 <li class="nav-item">
                     <a class="nav-link" href="#">درباره ما</a>
                 </li>
