--- a/Main/Views/Users/Edit.cshtml
+++ b/Main/Views/Users/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ViewModels.Users.EditViewModel
+﻿@model ViewModels.Users.CreateViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -11,23 +11,45 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h4>User</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.Id)
 
-        @Html.HjEditor(model => model.Name)
+    @Html.HjEditor(model => model.Name)
 
-        @Html.HjEditor(model => model.Password)
+    @Html.HjEditor(model => model.Password)
 
-        @Html.HjEditor(model => model.ConfirmPassword)
+    @Html.HjEditor(model => model.ConfirmPassword)
 
-        @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
+    <div class='form-group row'>
+
+        @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "control-label col-sm-2" })
+        <div class='col-sm-8'>
+
+            @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Mobile, "", new { @class = "text-danger" })
+
+        </div>
     </div>
+    <div class='form-group row'>
+
+        @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-2" })
+        <div class='col-sm-8'>
+
+            @Html.TextAreaFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+
+        </div>
+    </div>
+
+
+    @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
+</div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("برگشت به لیست", "Index")
 </div>
