--- a/Main/Views/RegisterOrder/Index.cshtml
+++ b/Main/Views/RegisterOrder/Index.cshtml
@@ -59,7 +59,7 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            <label>@item.Price.ToString("0#,##0 ")</label>
+            <label>@item.Price.ToString("#,##0 ")</label>
        
             
         </td>
