--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -98,6 +98,7 @@
                             <a class="dropdown-item" href="/Report/Index">گزارش سفارشها</a>
                             <a class="dropdown-item" href="/Watch/Index">سفارش ها امروز</a>
                             <a class="dropdown-item" href="/Users/index">ویرایش اطلاعات کاربران</a>
+                            <a class="dropdown-item" href="/Configs/index">تنظیمات</a>
                         </div>
                     </li>
                 }
