--- a/Main/Views/Watch/Index.cshtml
+++ b/Main/Views/Watch/Index.cshtml
@@ -112,7 +112,7 @@
                                                 Sum = Sum + temp;
                                             }
                                             <td>@facDetails.Name</td>
-                                            <td>@facDetails.Price.ToString("0#,##0 ")</td>
+                                            <td>@facDetails.Price.ToString("#,##0 ")</td>
                                             <td>@facDetails.Count</td>
 
                                             <td>@temp.ToString("0#,##0 ")</td>
