--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -91,8 +91,7 @@
                                 {{item.Description}}
                             </p>
                             <p v-if="item.ShowBread">
-
-                                <input type="checkbox" v-model="item.hasBread" @*v-on:click="changePrice(item.Id)"*@ name="name" value="" />
+                                <input type="checkbox" v-model="item.hasBread"  name="name" value="" />
                                 نون اضافه
                             </p>
                             <button v-if="item.Available" class="btn btn-primary getAddProduct" v-on:click="getAddProduct(item)" style="font-size:11px">افزودن به سبد خرید </button>
