--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -27,7 +27,7 @@
         }
     </style>
     <link href="@Links.Content.Site_css" rel="stylesheet" type="text/css" />
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title | ساندویج طاها</title>
 
 </head>
 
@@ -60,9 +60,7 @@
                 <div class="carousel-item">
                     <img src="~/Content/Image/chicago.png" alt="Chicago">
                 </div>
-                <div class="carousel-item">
-                    <img src="~/Content/Image/ny.png" alt="New York">
-                </div>
+          
             </div>
 
             <!-- Left and right controls -->
@@ -101,6 +99,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="/Order/Create">ایجاد منو غذا</a>
+                            <a class="dropdown-item" href="/Order/Index">لیست غذا ها</a>
                             <a class="dropdown-item" href="/Report/Index">گزارش سفارشها</a>
                             <a class="dropdown-item" href="/Watch/Index">سفارش ها امروز</a>
                             <a class="dropdown-item" href="/Users/index">ویرایش اطلاعات کاربران</a>
@@ -109,8 +108,12 @@
                     </li>
                 }
                 <li class="nav-item">
-                    <a class="nav-link" href="#">درباره ما</a>
+                    <a class="nav-link" href="/About/Index">درباره ما</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href=" /About/HamidJalalat">ارتباط با برنامه نویس</a>
+                </li>
+               
             </ul>
         </nav>
 
