--- a/Main/Views/Users/Index.cshtml
+++ b/Main/Views/Users/Index.cshtml
@@ -16,7 +16,7 @@
         LoadingElementDuration = 500
     };
 }
-<h2>Index</h2>
+<h2>لیست کاربران</h2>
 <div class="row">
     <div class="col-sm-12 bg-info">
         <div id="deleteResult"></div>
