--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -106,7 +106,7 @@
                             </p>
                             <p v-if="item.ShowBread">
                                 <input type="checkbox" v-model="item.hasBread" name="name" value="" />
-                                نون اضافه
+                                نان اضافه
                             </p>
                             <button v-if="item.Available" class="btn btn-block  getAddProduct" v-on:click="getAddProduct(item)" style="font-size:11px">افزودن به سبد خرید </button>
                             <p v-else>
