--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -87,10 +87,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Order/OrederCustomer">ثبت سفارش</a>
                 </li>
-
-
-
-
+                <li class="nav-item">
+                    <a class="nav-link" href="/OrderMe/Index">سفارش های من</a>
+                </li>
 
                 @if (User.Identity.Name == "AdminAdmin")
                 {
