--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -24,7 +24,8 @@
             border-radius: 0 0 4px 4px;
         }
 </style>
-<h2>حمید جلالت</h2>
+<h4>حمید جلالت</h4>
+<h4>Hamid Jalalat</h4>
 <div class="row">
     <div class="col-sm-6">
         <div class="row">
