--- a/Main/Views/Order/Create.cshtml
+++ b/Main/Views/Order/Create.cshtml
@@ -54,7 +54,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.GroupProductId, "گروه غذا", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GroupProductId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("GroupProductId", null, htmlAttributes: new { @class = "form-control browser-default custom-select" })
                 @Html.ValidationMessageFor(model => model.GroupProductId, "", new { @class = "text-danger" })
             </div>
         </div>
