--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -123,7 +123,6 @@
                     <div class="col-12 table-responsive">
                         <table class="table table-bordered table-striped table-hover table-sm">
                             <tr>
-
                                 <th>نام</th>
                                 <th>قیمت</th>
                                 <th>تعداد</th>
@@ -150,10 +149,10 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-sm-8">
-                        <label><b>جمع کل پرداختی........................</b></label>
+                    <div class="col-sm-6">
+                        <label><b>جمع کل پرداختی</b></label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <span><b>{{ getTotal() }} تومان</b></span>
                     </div>
 
