--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -29,7 +29,7 @@
     </style>
     <link href="@Links.Content.Site_css" rel="stylesheet" type="text/css" />
 
-    <title>@ViewBag.Title | ساندویج طاها</title>
+    <title>@ViewBag.Title پیتزا ساندویچ طاها</title>
 
 </head>
 
