--- a/Main/Views/RegisterOrder/Index.cshtml
+++ b/Main/Views/RegisterOrder/Index.cshtml
@@ -27,6 +27,9 @@
 </head>
 <body>
     <br />
+    @Html.ActionLink("ثبت نهایی", "RegisterFactor", null, new { @class = "btn btn-primary" })
+    <br />
+    <br />
     <table class="table " >
         <tr>
             <th>
