--- a/Main/Views/Users/Create.cshtml
+++ b/Main/Views/Users/Create.cshtml
@@ -1,71 +1,75 @@
 ﻿@model ViewModels.Users.CreateViewModel
 @using Infrastructure
 @{
+    Layout = "~/Views/Shared/_Layout_Solid.cshtml";
     ViewBag.Title = @Resources.Users.Create;
 }
-
 <style>
-    #Address{
-        width:800px;
-        height:100px;
+    #Address {
+        width: 800px;
+        height: 100px;
     }
 </style>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
+    <div class="form-horizontal">
 
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-<div class="card">
-    <div class="card-header">
-        <h3 class="panel-title">
-            @Resources.General.InfoUsers
-        </h3>
-    </div>
-    <div class="card-body">
-        @Html.HjEditor(model => model.Name)
+        <div class="card">
+            <div class="card-header">
+                <h3 class="panel-title">
+                    @Resources.General.InfoUsers
+                </h3>
+            </div>
+            <div class="card-body">
+                @Html.HjEditor(model => model.Name)
 
-        @Html.HjEditor(model => model.Password)
+                @Html.HjEditor(model => model.Password)
 
-        @Html.HjEditor(model => model.ConfirmPassword)
+                @Html.HjEditor(model => model.ConfirmPassword)
 
-        <div class='form-group row'>
-            @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "control-label col-sm-2" })
-            <div class='col-sm-8'>
+                <div class='form-group row'>
+                    @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "control-label col-sm-2" })
+                    <div class='col-sm-8'>
 
-                @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control", placeholder = "نمونه:09124881649" } })
-                @Html.ValidationMessageFor(model => model.Mobile, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control", placeholder = "نمونه:09124881649" } })
+                        @Html.ValidationMessageFor(model => model.Mobile, "", new { @class = "text-danger" })
 
+                    </div>
+                </div>
+                <div class='form-group row'>
+
+                    @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-2" })
+                    <div class='col-sm-8'>
+
+                        @Html.TextAreaFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+
+                    </div>
+                </div>
+                <div class='form-group row'>
+                    <div class="col-sm-2">
+
+                    </div>
+                    <div class="col-sm-8">
+                        @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
+                    </div>
+                </div>
+
+                <h4>
+                    @Resources.General.MessageValid
+                </h4>
             </div>
         </div>
-        <div class='form-group row'>
 
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-2" })
-            <div class='col-sm-8'>
 
-                @Html.TextAreaFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-
-            </div>
-        </div>
-
-        @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
-        <h4>
-            @Resources.General.MessageValid
-        </h4>
     </div>
-</div>
-
- 
-</div>
 }
-
 <div>
-
 </div>
-
 
